# manage-my-budget

./: .gitignore  CMakeLists.txt  ManageMyBudget.sln  ManageMyBudget.vcxproj  ManageMyBudget.vcxproj.filters  readme.md
dependencies/include/test-library/: ApplicationTest.h  ConsoleColor.h  Test.h  Verifier.h
dependencies/test-library/: TestLibrary.lib
src/: main.cpp
src/app/: AddAccountDialog.cpp  AddAccountDialog.h  AddOperationForm.cpp  AddOperationForm.h  AddProfileDialog.cpp  AddProfileDialog.h  AmountValueFormatter.cpp  AmountValueFormatter.h  ApplicationException.cpp  ApplicationException.h  BackUpManager.cpp  BackUpManager.h  ConfirmationRequiser.cpp  ConfirmationRequiser.h  Converter.cpp  Converter.h  CustomException.cpp  CustomException.h  DataManager.cpp  DataManager.h  EditAccountDialog.cpp  EditAccountDialog.h  EditCategoryDialog.cpp  EditCategoryDialog.h  EditOperationDialog.cpp  EditOperationDialog.h  ExceptionHandler.cpp  ExceptionHandler.h  Files.cpp  ForbiddenActionException.cpp  ForbiddenActionException.h  InvalidInputException.cpp  InvalidInputException.h  MainWindow.cpp  MainWindow.h  ManageAccountsDialog.cpp  ManageAccountsDialog.h  ManageCategoriesDialog.cpp  ManageCategoriesDialog.h  ManageProfilesDialog.cpp  (+18 more)
src/application/: Application.cpp  Application.h
src/core/: Accountant.cpp  Accountant.h  Amount.cpp  Amount.h  BankAccount.cpp  BankAccount.h  Category.h  Operation.cpp  Operation.h  Profile.cpp  Profile.h
src/data/: BackUp.cpp  BackUp.h  Data.cpp  Data.h  StateManager.cpp  StateManager.h
src/domain/: Accountant.cpp  Accountant.h  Amount.cpp  Amount.h  BankAccount.cpp  BankAccount.h  Category.cpp  Category.h  Operation.cpp  Operation.h  Profile.cpp  Profile.h
src/exceptions/: FileException.cpp  FileException.h  ForbiddenActionException.cpp  ForbiddenActionException.h
src/files/: Files.cpp  Files.h
src/ui/: MainWindow.cpp  MainWindow.h
src/ui/account/: AddAccountDialog.cpp  AddAccountDialog.h  EditAccountDialog.cpp  EditAccountDialog.h  ManageAccountsDialog.cpp
src/ui/category/: EditCategoryDialog.cpp  ManageCategoriesDialog.cpp  ManageCategoriesDialog.h
src/ui/format/: MonthString.cpp  MonthString.h  StringFormatter.h
src/ui/hooks/: ExceptionHandler.cpp  ExceptionHandler.h
src/ui/operation/: AddOperationForm.cpp  EditOperationDialog.cpp  EditOperationDialog.h  OperationsList.cpp
src/ui/profile/: AddProfileDialog.cpp  ManageProfilesDialog.cpp  ManageProfilesDialog.h  RenameProfileDialog.cpp
src/ui/review/: MonthlyReviewDialog.cpp  YearlyReviewDialog.cpp  YearlyReviewDialog.h
test/: AmountTest.h  CMakeLists.txt  Test.cpp  Test.vcxproj  Test.vcxproj.filters
